# hfcal

./: .gitignore  AI-INTEGRATION.md  INSTALL.md  LICENSE  README.md  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-android.yml  build-ios.yml  build-windows.yml  deploy-pages.yml
src/: HFCalc.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
